Bug 361585 - Two-finger gesture to zoom on trackpad causes zoom-mode to be always on
Summary: Two-finger gesture to zoom on trackpad causes zoom-mode to be always on
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 3.0 Alpha
Platform: macOS (DMG) macOS
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2016-04-10 10:29 UTC by Johan
Modified: 2016-07-31 14:55 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johan 2016-04-10 10:29:51 UTC
After zooming with two-finger gesture the zoom-mode seems to be always on, regular cursor is replaced with zoom-icon and scrolling stops working entirely. Changing tool to Shape Manipulation tool or anything else has no effect.

Reproducible: Always

Steps to Reproduce:
1. Open up Krita 3.0 Alpha (d75b959)
2. Create a new document
3. Zoom using two-finger gesture on trackpad

Actual Results:  
Zoom turns on permanently nothing can be done about it. Everything else stops working.

Expected Results:  
Zoom based on gestures (f.e. pinch to zoom out) and change selected tool to what was used right before zooming.

OS: OS X El Capitan 10.11.3 (15D21)
Comment 1 Halla Rempt 2016-04-12 07:01:33 UTC
Hi Johan,

Thanks for your report. I can confirm the bug.
Comment 2 eliotJ 2016-05-11 14:24:05 UTC
Hi

Does it's also exist in Krita v2.9.x or does it's a regression in v3.0 ?
Comment 3 Johan 2016-05-14 09:10:39 UTC
Only on v3.0.
Comment 4 eliotJ 2016-05-15 22:13:10 UTC
 Johan <- Thanks
Comment 5 Halla Rempt 2016-05-25 13:02:12 UTC
Git commit d36db204decf5be3715b3a9953b30d360d65e7ae by Boudewijn Rempt.
Committed on 25/05/2016 at 13:02.
Pushed by rempt into branch 'master'.

Disable touch events on OSX

M  +5    -1    libs/ui/canvas/kis_qpainter_canvas.cpp
M  +9    -3    libs/ui/opengl/kis_opengl_canvas2.cpp

http://commits.kde.org/krita/d36db204decf5be3715b3a9953b30d360d65e7ae
Comment 6 jdreske 2016-07-31 14:55:15 UTC
I still have the same problem as mentioned above. 
When I try to zoom or pan with the trackpad (OSX 10.11.6) krita gets so unresponsive I have to close and reopen. Same with 3.0.1 alpha.