Disable touch events on OSX

BUG:361585